--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,77 +1,52 @@
 <!DOCTYPE html>
-
 <html>
 <head>
  <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <title>Place Posts!<title>
+</head>
 
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="/">My Favorite Places</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        </ul>
-
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         </ul>
 
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <% if @current_user %>
         <li class="nav-item">Logged in as: <%= @current_user.username %></li>
-        <li class="nav-item"><%= button_to "logout", "/sessions/logout", method: :delete, class: "nav-link" %></li>
+        <li class="nav-item"><%= button_to "Logout", "/sessions/logout", method: :delete, class: "nav-link" %></li>
         <% else %>
         <li class="nav-item"><a href="/sessions/new" class="nav-link">Login</a></li>
         <li class="nav-item"><a href="/users/new" class="nav-link">Sign Up</a></li>
         <% end %>
         </div>
+        
   </div>
   </div>
 </nav>
 
-<html>
-  <head>
-    <title>Tacostagram Final</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<div class="container mt-3">
+<div class="row">
+<div class="col text-center">
+<%= flash[:notice] %>
+</div>
+</div>
 
-    <link rel="stylesheet" href="/stylesheets/application.css">
-  </head>
+<% yield %>
 
-  <body>
-    <div>
-      <%= flash[:notice] %>
-    </div>
-    <div>
-    <% if @current_user %>
-    <a href="/places">Home</a>
-    <%= button_to "logout", "/sessions/logout", method: :delete %>
-    <% else %>
-      <a href="/sessions/new">Login</a>
-      <a href="/users/new">Signup</a>
-      <% end %>
-    </div>
+</div>
 
-    <%= yield %>
-  </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+</body>
 </html>
