--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,11 +1,11 @@
 <h1>Places</h1>
 
-<ul>
-  <% for place in @places %>
-    <li><a href="/places/<%= place.id %>"><%= place.name %></a></li>
-  <% end %>
-</ul>
-
 <p>
-  <a href="/places/new">New place</a>
+<a href="/places/new" class="btn btn-success">New Place</a>
 </p>
+
+<h2>
+<% for place in @places %>
+<p><a href="/places/<%= place.id %>"><% place.name %></a></p>
+<% end %>
+</h2>
