--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -6,6 +6,6 @@
 
 <h2>
 <% for place in @places %>
-<p><a href="/places/<%= place.id %>"><% place.name %></a></p>
+<p><a href="/places/<%= place.id %>"><%= place.name %></a></p>
 <% end %>
 </h2>
