--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -5,7 +5,9 @@
 </p>
 
 <h2>
+<% if @current_user %>
 <% for place in @places %>
 <p><a href="/places/<%= place.id %>"><%= place.name %></a></p>
+<% end %>
 <% end %>
 </h2>
